--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="tga/" class="clickable-div"><img src="tga/tga.png">TGA Converter</a>
         </div>
         <div class="row">
-            <a href="qwt/index.html" class="clickable-div"><img src="qwt/qwt.png" alt="Quake Web Tools Image">Quake Web Tools</a>
+            <a href="qwt/" class="clickable-div"><img src="qwt/qwt.png" alt="Quake Web Tools Image">Quake Web Tools</a>
             <a href="https://jpiolho.github.io/QEBSPEditor" class="clickable-div"><img src="qebspeditor.png" alt="QEBSP Editor Image">QEBSP Editor</a>
         </div>
 
