--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <a href="tga/" class="clickable-div"><img src="tga/tga.png">TGA Converter</a>
             <a href="qwt/" class="clickable-div"><img src="qwt/qwt.png" alt="Quake Web Tools Image">Quake Web Tools</a>
             <a href="https://jpiolho.github.io/QEBSPEditor" class="clickable-div"><img src="qebspeditor.png" alt="QEBSP Editor Image">QEBSP Editor</a>
-            <!-- Add more .clickable-div as needed -->
+        </div>
+        <div class="row">   
+            <a href="md3/" class="clickable-div"><img src="md3/md3.png">MD3 Viewer</a>
         </div>
         <!-- Add more .row as needed -->
     </div>
