--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div class="row">   
             <a href="md3/" class="clickable-div"><img src="md3/md3.png">MD3 Viewer</a>
+            <a href="md5/" class="clickable-div"><img src="md5/md5.png">MD5 Viewer</a>
         </div>
         <!-- Add more .row as needed -->
     </div>
