--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <a href="pak/" class="clickable-div"><img src="pak/pak.png">PAK Tool</a>
             <a href="namemaker/" class="clickable-div"><img src="namemaker/namemaker.png">Name Maker</a>
-            <a href="lmp/" class="clickable-div"><img src="lmp/lmp.png">LMP Creator</a>
+            <a href="lmp/" class="clickable-div"><img src="lmp/lmp.png">LMP Converter</a>
         </div>
         <div class="row">   
             <a href="tga/" class="clickable-div"><img src="tga/tga.png">TGA Converter</a>
