--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <a href="qwt/" class="clickable-div"><img src="qwt/qwt.png" alt="Quake Web Tools Image">Quake Web Tools</a>
             <a href="https://jpiolho.github.io/QEBSPEditor" class="clickable-div"><img src="qebspeditor.png" alt="QEBSP Editor Image">QEBSP Editor</a>
         </div>
-        <div class="row">   
+        <div class="row"> 
+            <a href="files.html" class="clickable-div"><img src="maps.png">Multiplayer Files</a>
             <a href="md3/" class="clickable-div"><img src="md3/md3.png">MD3 Viewer</a>
             <a href="md5/" class="clickable-div"><img src="md5/md5.png">MD5 Viewer</a>
         </div>
