--- a/sound/bloodrailz/index.html
+++ b/sound/bloodrailz/index.html
@@ -46,7 +46,7 @@
     <script>
         const user = 'q1tools'; // Your GitHub username
         const repo = 'q1tools.github.io'; // Your repository name
-        const path = 'sound/ambience'; // Path to the directory in your repository
+        const path = 'sound/bloodrailz'; // Path to the directory in your repository
 
         document.getElementById('directoryHeading').textContent += path;
 
