--- a/files.html
+++ b/files.html
@@ -23,6 +23,9 @@
             <a href="progs/" class="clickable-div-no-image">models</a>
             <a href="sound/" class="clickable-div-no-image">sounds</a>
         </div>
+        <div class="row">   
+            <a href="paks/" class="clickable-div-no-image">paks</a>
+        </div>
         <!-- Add more .row as needed -->
     </div>
     <footer>
