--- a/qwt/index.html
+++ b/qwt/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 
     <title>Quake Web Tools</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png">
     <link rel="stylesheet" href="QuakeWebTools/css/style.css">
 
     <!--lib-->
