--- a/namemaker/index.html
+++ b/namemaker/index.html
@@ -5,7 +5,7 @@
     <!-- Modified by xaGe on 20180228 for megatf wiki / woods 11/5/23 -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Quake Name Maker</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jschardet@2.1.1/dist/jschardet.min.js"></script>
