--- a/sound/ambience/index.html
+++ b/sound/ambience/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Directory Listing</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon.png">
     <style>
         body {
             background-color: #333;
