--- a/lmp/index.html
+++ b/lmp/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>LMP Converter</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
