add lmp support for md5

--- a/md5/index.html
+++ b/md5/index.html
@@ -12,8 +12,8 @@
     <h1 class="header-container">
         <img src="md5.png" class="header-image" alt="">MD5 Viewer
     </h1>
-    <div id="dropZone" class="drop-zone">Drag or click to select MD5 model (.md5mesh) <span style="color:#ffffff;">and</span> (.md5anim) <span style="color:#ffffff;">and</span> a texture (.png/.jpg)</div>
-    <input type="file" id="fileInput" accept=".md5anim, .md5mesh, .png, .jpg" hidden multiple>
+    <div id="dropZone" class="drop-zone">Drag or click to select MD5 model (.md5mesh) <span style="color:#ffffff;">and</span> (.md5anim) <span style="color:#ffffff;">and</span> a texture (.lmp/.png/.jpg)</div>
+    <input type="file" id="fileInput" accept=".md5anim, .md5mesh, .png, .jpg, .lmp" hidden multiple>
     <center>
 
     <canvas id="canvas" width="600" height="600"></canvas>
