--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <a href="md3/" class="clickable-div"><img src="md3/md3.png">MD3 Viewer</a>
             <a href="md5/" class="clickable-div"><img src="md5/md5.png">MD5 Viewer</a>
         </div>
+        <div class="row"> 
+            <a href="svg/" class="clickable-div"><img src="svg/svg.png">BSP to SVG</a>
+        </div>
         <!-- Add more .row as needed -->
     </div>
     <footer>
