--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
         <div class="row"> 
             <a href="svg/" class="clickable-div"><img src="svg/svg.png">BSP to SVG</a>
+            <a href="https://servers.quakeone.com" class="clickable-div"><img src="gamespy.png" alt="Gamespy Image">Servers List</a>
         </div>
         <!-- Add more .row as needed -->
     </div>
