change around a bit

--- a/files.html
+++ b/files.html
@@ -25,7 +25,7 @@
         </div>
         <div class="row">   
             <a href="paks/" class="clickable-div-no-image">paks</a>
-            <a href="gfx/env" class="clickable-div-no-image">skyboxes</a>
+            <a href="skyboxes.html" class="clickable-div-no-image">skyboxes</a>
         </div>
         <!-- Add more .row as needed -->
     </div>
