--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="row"> 
             <a href="svg/" class="clickable-div"><img src="svg/svg.png">BSP to SVG</a>
             <a href="https://servers.quakeone.com" class="clickable-div"><img src="gamespy.png" alt="Gamespy Image">Servers List</a>
+            <a href="tree/" class="clickable-div"><img src="tree/treelogo.png" alt="Quake Tree Image">Quake Tree</a>
         </div>
         <!-- Add more .row as needed -->
     </div>
