--- a/tree/index.html
+++ b/tree/index.html
@@ -184,7 +184,8 @@ const DATA = {
           children: [
             { name: "PyQuake-M", url: "https://github.com/timbergeron/pyquake-m" }
           ]
-        }
+        },
+        { name: "Qwasm", url: "https://github.com/GMH-Code/Qwasm" }
       ]
     },
     {
@@ -270,6 +271,7 @@ const DATA = {
             { name: "NetQuake.io", url: "https://www.netquake.io/" }
           ]
         },
+        { name: "Qwasm", url: "https://github.com/GMH-Code/Qwasm" },
         { name: "Hexen II", url: "https://en.wikipedia.org/wiki/Hexen_II" },
         { name: "QMB", url: "https://github.com/OrphicAbyss/QMB" },
         { name: "EngineX", url: "https://github.com/timbergeron/Engine-X" },
