--- a/tree/index.html
+++ b/tree/index.html
@@ -264,7 +264,8 @@ const DATA = {
                     { name: "TASQuake", url: "https://github.com/lipsanen/TASQuake" }
                   ]
                 },
-            { name: "Quore", url: "http://quore.free.fr/" }
+            { name: "Quore", url: "http://quore.free.fr/" },
+            { name: "JoeQuake SDL Linux", url: "https://github.com/matthewearl/JoeQuake-1" }
           ]
         },
         {
