--- a/tree/index.html
+++ b/tree/index.html
@@ -266,7 +266,9 @@ const DATA = {
                     { name: "Quakespasm-Rift", url: "https://github.com/phoboslab/Quakespasm-Rift" },
                     { name: "Slipgate", url: "https://github.com/KurtLoeffler/Slipgate" },
                     { name: "D3DQuakeX360", url: "https://github.com/brentdc-nz/D3DQuakeX360" },
-                    { name: "snakespasm", url: "https://github.com/tuorqai/snakespasm" }
+                    { name: "snakespasm", url: "https://github.com/tuorqai/snakespasm" },
+                    { name: "QuakeRTX", url: "https://github.com/jmarshall23/QuakeRTX" },
+                    { name: "quakevr", url: "https://github.com/vittorioromeo/quakevr" }
                   ]
                 },
             { name: "KatanaEngine", url: "https://github.com/Acidburn0zzz/KatanaEngine" }
@@ -301,6 +303,7 @@ const DATA = {
             { name: "DemonQuake" },
                 {
                   name: "NEAQUAKE",
+                  url: "https://github.com/crashfort/NEAQUAKE",
                   children: [
                     { name: "TASQuake", url: "https://github.com/lipsanen/TASQuake" }
                   ]
@@ -370,7 +373,13 @@ const DATA = {
         {
           name: "PSP Quake",
           children: [
-            { name: "KUROK", url: "https://www.bladebattles.com/kurok" }
+            {
+              name: "KUROK",
+              url: "https://www.bladebattles.com/kurok",
+              children: [
+                { name: "Insomnia-ProQuake", url: "https://github.com/darkduke606/Insomnia-ProQuake-Engine" }
+              ]
+            }
           ]
         }
       ]
